# KuechenWaage

arduino/: CMakeLists.txt  cmake4eclipse.bash  serial.bash
arduino/libraries/: readme.txt
arduino/libraries/Adafruit_GFX/: CMakeLists.txt  library.properties
arduino/libraries/Adafruit_GFX/src/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h
arduino/libraries/Adafruit_ST77xx/: CMakeLists.txt
arduino/src/: blink.cpp  calibrate_kitchenscale.cpp  displaytest_1_77.cpp  kitchenscale.cpp  scale_serial.cpp
arduino/test/ILI9341_TFT/: ILI9341_TFT.ino
arduino/test/ILI_9225_Example_01_Simple_test/Simple_test/: Simple_test.ino
arduino/test/tft_1_77_7789_graphicstest/: tft_1_77_7789_graphicstest.ino
housing/: KuechenWaage2.FCStd
hw/KiCad/: Mine.kicad_sym  fp-info-cache  fp-lib-table  kitchen_scale-cache.lib  kitchen_scale.kicad_pcb  kitchen_scale.kicad_prl  kitchen_scale.kicad_pro  kitchen_scale.kicad_sch  kitchen_scale.sch  sym-lib-table
hw/KiCad/Mine.pretty/: DEBO1_3_7LI_1_0A_charge_controller.kicad_mod
